[package]
name = "using-diesel"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

[dependencies]
diesel = { version = "0.16", features = ["postgres", "sqlite"] }
diesel_codegen = { version = "0.16", features = ["postgres", "sqlite"] }
openssl-sys = "*"

[patch.crates-io]
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }
