[package]
name = "using-sqlx"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-probe = "0.1.4"
sqlx = { version = "0.5.9", default-features = false, features = ["runtime-tokio-rustls", "macros", "offline", "postgres"] }
tokio = { version = "0.2.25", features = ["macros"] }
